# miko

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO_ADT_POLYMORPHISM.md  build.rs  report_cn.md
doc/: report_cn.md
docs/: overview.md
docs/runtime/: builtins.md  closures.md  compilation.md  memory.md
docs/specs/: adt.md  concepts.md  functions.md  modules.md  operators.md  pattern-matching.md  syntax.md  type-inference.md  type-system.md
docs/todo/: COMPLETED_TODO_ADT_POLYMORPHISM.md  COMPLETED_module_system_phase2.md  COMPLETED_recursive-adt-segfault.md  TODO_module_system_phase2.md  concept_eq_issue.md
libllvm/: Cargo.toml
libllvm/src/: lib.rs  wrapper.rs
src/: internal.rs  lib.rs  main.rs  parser.rs  parser_nom.rs  syntax.rs  types.rs  utils.rs
src/codegen/: emit.rs  llvm.rs  mod.rs  target.rs
src/codegen/llvm/: mod.rs  wrapper.rs
src/core/: convert.rs  escape.rs  mod.rs  term.rs
src/lib/: Makefile  base.c
src/lib/include/: gc_bitmap.h  gsvalue.h
src/lib/runtime/: gc_bitmap.c
src/modules/: deps.rs  imports.rs  loader.rs  mod.rs
src/runtime/: gc.h  gc_bitmap.c  gsvalue.h
src/syntax/: form.rs  interm.rs  mod.rs  parser.rs
src/syntax/parser/: grammar.rustpeg  mod.rs
src/typeinfer/: constraint.rs  error.rs  infer.rs  mod.rs  mono.rs  subst.rs  typeenv.rs
test/: adt_basic.gs  adt_bool.gs  adt_either.gs  adt_list.gs  adt_maybe.gs  adt_multi_field.gs  adt_nat.gs  adt_nested.gs  adt_pair.gs  adt_tree.gs  cls.gs  concept_eq.gs  factorial.gs  fib_cls.gs  fibonacci.gs  match_literal.gs
