[package]
name = "miko"
version = "0.1.0"
authors = ["nameoverflow <i@hcyue.me>"]
edition = "2021"
build = "build.rs"

[dependencies]
bytecount = "0.6"
llvm-sys = "140"
clap = { version = "4", features = ["derive"] }
libllvm = { path = "./libllvm" }
libc = "0.2"
peg = "0.8"

[build-dependencies]
cc = "1.0"
